Add the form to the project_6

--- a/project_6.html
+++ b/project_6.html
@@ -377,6 +377,7 @@
     </section>
     <!-- Cart Section -->
     <section id="cart">
+      <form name="cart">
       <header>
         <h1 class="cartTitle">Cart details</h1>
       </header>
@@ -442,6 +443,7 @@
           </span>
         </div>
       </div>
+      </form>
     </section>
   </article>
 
